<resources>
    <string name="app_name">Fitness Assistant</string>
    <string name="app_version" translatable="false">1.0</string>

    <string name="app_id" translatable="false">ca-app-pub-4362142146545991~9298977150</string>
    <string name="st_banner_main_id" translatable="false">ca-app-pub-4362142146545991/9745985124</string>
    <string name="st_banner_bmi_top_id" translatable="false">ca-app-pub-4362142146545991/8241331767</string>
    <string name="st_banner_bmi_bottom_id" translatable="false">ca-app-pub-4362142146545991/4728628015</string>
    <string name="st_banner_activities_catalog_bottom_id" translatable="false">ca-app-pub-4362142146545991/3607666779</string>
    <string name="st_banner_relaxation_id" translatable="false">ca-app-pub-4362142146545991/8668421763</string>
    <string name="st_banner_current_exercise_id" translatable="false">ca-app-pub-4362142146545991/5040453351</string>
    <string name="st_banner_finish_bottom_id" translatable="false">ca-app-pub-4362142146545991/4729176758</string>
    <!-- todo change -->
    <string name="st_interstitial_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <!--
    General values
    -->
    <string name="st_empty_path" translatable="false">none</string>
    <string name="st_add_data">Add missing data</string>
    <string name="st_access">Access to the storage is not available.  Please grant permission</string>
    <string name="st_wrong_data">Wrong data type</string>
    <string name="st_added_to_history">Added to History</string>
    <string name="st_permission_needed_to_be_granted" translatable="false">Permissions required for this feature have been turned off.
        It can be enabled under the Application Settings</string>
    <string name="st_go_to_settings">Settings</string>
    <string name="st_cancel">Cancel</string>
    <string name="st_play_market">Play Store</string>
    <string name="st_required_app_need_to_install" translatable="false">App required for this feature is not Installed</string>
    <!--
    General
    -->
    <string name="st_bmi" translatable="false">BMI</string>
    <string name="st_height">Height</string>
    <string name="st_weight">Weight</string>
    <string name="st_delete_all">Delete All</string>
    <string name="st_start">Start</string>
    <string name="st_statistics">Statistics</string>
    <string name="st_workout_duration">Workout duration</string>
    <!--
    MainActivity
    -->
    <string name="st_activities">Activities</string>
    <string name="st_info">Info</string>
    <string name="st_no_data">No data</string>
    <!--
    BmiActivity
    -->
    <string name="st_sm">(sm)</string>
    <string name="st_kg">(kg)</string>
    <string name="st_in" translatable="false">(in)</string>
    <string name="st_lbs" translatable="false">(lbs)</string>
    <string name="st_result">Result</string>
    <string name="st_bmi_index">BMI Index</string>
    <string name="st_calculate">Calculate</string>
    <string name="st_history">History</string>
    <string name="st_status">Status</string>

    <string name="st_underweight">Underweight</string>
    <string name="st_normal">Normal</string>
    <string name="st_overweight">Overweight</string>
    <string name="st_obese">Obese</string>
    <string name="st_ex_obese">Extremely Obese</string>
    <!--
    SelectExerciseDialog
    -->
    <string name="st_voice_assistant">Voice Assistant</string>
    <string name="st_on" translatable="false">On</string>
    <string name="st_off" translatable="false">Off</string>
    <string name="st_relaxation_time">Rest duration</string>
    <string name="st_exercise_time">Exercise duration</string>
    <string name="st_choose_exercise">Choose exercises</string>
    <!--
    ActivitiesCatalogActivity
    -->
    <string name="st_add_exercise">Add exercise</string>
    <string name="st_exercise_name">Exercise Name</string>
    <string name="st_optional">Optional</string>
    <string name="st_description">Description</string>
    <string name="st_save">Save</string>
    <!--
    ExerciseActivity
    -->
    <string name="st_relax">Relax</string>
    <string name="st_upcoming_exercise">Upcoming Exercise:</string>
    <string name="st_exercise_completed_phrase">Exercise completed</string>
    <!--
    FinishActivity
    -->
    <string name="st_end">The End</string>
    <string name="st_exit">Exit</string>
    <string name="st_finished_today">Finished Today</string>
    <string name="st_update_bmi_data">Add new BMI data</string>
    <string name="st_or">or</string>
    <!--
    InfoDialog
    -->
    <string name="st_version">Version: </string>
    <string name="st_back">Back</string>
    <string name="st_license" translatable="false">"License for everything not in third_party and not otherwise marked:

Copyright 2014 Google, Inc. All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are
permitted provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of
         conditions and the following disclaimer.

   2. Redistributions in binary form must reproduce the above copyright notice, this list
         of conditions and the following disclaimer in the documentation and/or other materials
         provided with the distribution.

THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS'' AND ANY EXPRESS OR IMPLIED
WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the
authors and should not be interpreted as representing official policies, either expressed
or implied, of Google, Inc.
---------------------------------------------------------------------------------------------
License for third_party/disklrucache:

Copyright 2012 Jake Wharton
Copyright 2011 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
---------------------------------------------------------------------------------------------
License for third_party/gif_decoder:

Copyright (c) 2013 Xcellent Creations, Inc.

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
---------------------------------------------------------------------------------------------
License for third_party/gif_encoder/AnimatedGifEncoder.java and
third_party/gif_encoder/LZWEncoder.java:

No copyright asserted on the source code of this class. May be used for any
purpose, however, refer to the Unisys LZW patent for restrictions on use of
the associated LZWEncoder class. Please forward any corrections to
kweiner@fmsware.com.

-----------------------------------------------------------------------------
License for third_party/gif_encoder/NeuQuant.java

Copyright (c) 1994 Anthony Dekker

NEUQUANT Neural-Net quantization algorithm by Anthony Dekker, 1994. See
"Kohonen neural networks for optimal colour quantization" in "Network:
Computation in Neural Systems" Vol. 5 (1994) pp 351-367. for a discussion of
the algorithm.

Any party obtaining a copy of these files from the author, directly or
indirectly, is granted, free of charge, a full and unrestricted irrevocable,
world-wide, paid up, royalty-free, nonexclusive right and license to deal in
this software and documentation files (the "Software"), including without
limitation the rights to use, copy, modify, merge, publish, distribute,
sublicense, and/or sell copies of the Software, and to permit persons who
receive copies from any such party to do so, with the only requirement being
that this copyright notice remain intact."</string>
</resources>