<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:orientation="vertical"
    tools:context=".activities.FinishActivity">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_banner_finish_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/st_banner_finish_bottom_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/st_finished_today"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/myDarkBlue"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adView_banner_finish_top" />

    <LinearLayout
        android:id="@+id/ll_average_duration"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="@dimen/dim_charts_margin_horizontal"
        android:layout_marginVertical="@dimen/dim_charts_margin_vertical"
        android:background="@drawable/background_rectangle_white"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ll_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/st_workout_duration"
            android:textAlignment="textEnd"
            android:textColor="@color/myDarkBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/st_no_data"
                android:textColor="@color/myDarkBlue"
                android:textSize="24sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart_workout_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/myWhite"
                android:visibility="invisible" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_exit"
        android:layout_width="@dimen/dim_finish_rectangles_widths"
        android:layout_height="@dimen/dim_finish_rectangles_heights"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_rectangle_ripple"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_average_duration">

        <ImageView
            android:layout_width="@dimen/dim_finish_circles_image_sizes"
            android:layout_height="@dimen/dim_finish_circles_image_sizes"
            android:layout_gravity="center"
            android:contentDescription="@string/st_exit"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/st_exit"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/myDarkBlue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>