<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_bmi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:orientation="vertical"
    tools:context=".fragments.BmiFragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/tb_measurementSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/tb_effect"
            android:checked="true"
            android:textOff=""
            android:textOn="" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/st_height"
            android:backgroundTint="@color/myGreenBlue"
            android:hint="@string/st_height"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textColor="@color/myGreenBlue"
            android:textColorHint="@color/myGreenBlue"
            android:textCursorDrawable="@color/myGreenBlue"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/st_weight"
            android:backgroundTint="@color/myGreenBlue"
            android:hint="@string/st_weight"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textColor="@color/myGreenBlue"
            android:textColorHint="@color/myGreenBlue"
            android:textCursorDrawable="@color/myGreenBlue"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_rectangle_white"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:visibility="invisible"
            tools:visibility="visible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_result"
                android:textAlignment="center"
                android:textColor="@color/myGreenBlue"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/myGreenBlue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="01/01/2001" />

            <TextView
                android:id="@+id/tv_bmi_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/st_bmi_index"
                android:textAlignment="center"
                android:textColor="@color/myGreenBlue"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_bmi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/myGreenBlue"
                android:textSize="22sp"
                tools:text="@string/st_status" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calculate"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rectangle_ol_ripple"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_calculate"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/myWhite"
                android:textSize="28sp" />
        </LinearLayout>


        <!-- Bmi history-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_show_history"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_rectangle_ripple"
            android:elevation="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_history"
                android:textAlignment="center"
                android:textColor="@color/myGreenBlue"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_expand"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_expand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Rv history-->
        <LinearLayout
            android:id="@+id/ll_bmi_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@color/myWhite"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="2"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/st_weight"
                    android:textAlignment="center"
                    android:textColor="@color/myGreenBlue"
                    android:textSize="@dimen/dim_item_bmi_date_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/st_height"
                    android:textAlignment="center"
                    android:textColor="@color/myGreenBlue"
                    android:textSize="@dimen/dim_item_bmi_date_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/st_bmi"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/myGreenBlue"
                    android:textSize="@dimen/dim_item_bmi_date_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_bmi"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/ll_delete_history"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginVertical="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_rectangle_ripple"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/st_delete_all"
                    android:textAlignment="center"
                    android:textColor="@color/myDarkBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_trash_bin" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>