<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ll_activities_background_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/myGreenBlue"
        android:scaleType="fitXY"
        android:elevation="4dp"
        />
    <TextView
        android:id="@+id/tv_apps_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_icon"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/myDarkBlue"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_apps_name"
        app:layout_constraintLeft_toRightOf="@id/iv_icon"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="Version: "
        android:textSize="22sp"
        android:textColor="@color/myDarkBlue"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_apps_name"
        app:layout_constraintLeft_toRightOf="@id/tv_version"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/app_version"
        android:textSize="22sp"
        android:textColor="@color/myDarkBlue"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="340dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Open source licenses"
            android:textSize="26sp"
            android:textColor="@color/myDarkBlue"
            android:textAlignment="textStart"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text=" - Glide v4"
            android:textSize="18sp"
            android:textColor="@color/myDarkBlue"
            android:textAlignment="textStart"
            android:textStyle="bold"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="350dp"
            >
            <TextView
                android:id="@+id/tv_glide_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/st_license"
                android:textAlignment="inherit"
                android:textSize="14sp"
                android:textColor="@color/myDarkBlue"
                />
        </ScrollView>

    </LinearLayout>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/btn_rectangle_ripple"
        android:paddingHorizontal="10dp"
        android:text="@string/st_back"
        android:textSize="22sp"
        android:textColor="@color/myDarkBlue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>